--- a/index.html
+++ b/index.html
@@ -35,16 +35,18 @@
         </div>
       </div>
     </header>
-    <div class="slider">
-      <div class="container">
-        <div class="text">
-          <h2>Дорогие братья и сестры</h2>
-          <p>
-            Приглашаем Вас каждое воскресенье в 13.00 на молебен о строительстве
-            Храма преподобного Саввы Сторожевского. Молебен служится на месте
-            строительства по адресу: пл. Викторио Кодовильи, вл. 1 напротив
-            бывшего кинотеатра “Енисей”
-          </p>
+    <div class="sliderWrap">
+      <div class="slider">
+        <div class="container">
+          <div class="text">
+            <h2>Дорогие братья и сестры</h2>
+            <p>
+              Приглашаем Вас каждое воскресенье в 13.00 на молебен о
+              строительстве Храма преподобного Саввы Сторожевского. Молебен
+              служится на месте строительства по адресу: пл. Викторио Кодовильи,
+              вл. 1 напротив бывшего кинотеатра “Енисей”
+            </p>
+          </div>
         </div>
       </div>
     </div>
@@ -131,6 +133,9 @@
                 <p>
                   19 февраля в этом году совпадает с неделей о Страшном Суде...
                 </p>
+                <div class="buttons">
+                  <span>></span><a href="#">Подробнее</a>
+                </div>
               </div>
             </div>
             <div class="smallContent">
@@ -140,6 +145,9 @@
                 <p>
                   19 февраля в этом году совпадает с неделей о Страшном Суде...
                 </p>
+                <div class="buttons">
+                  <span>></span><a href="#">Подробнее</a>
+                </div>
               </div>
             </div>
             <div class="smallContent">
@@ -149,6 +157,9 @@
                 <p>
                   19 февраля в этом году совпадает с неделей о Страшном Суде...
                 </p>
+                <div class="buttons">
+                  <span>></span><a href="#">Подробнее</a>
+                </div>
               </div>
             </div>
             <div class="smallContent">
@@ -158,6 +169,9 @@
                 <p>
                   19 февраля в этом году совпадает с неделей о Страшном Суде...
                 </p>
+                <div class="buttons">
+                  <span>></span><a href="#">Подробнее</a>
+                </div>
               </div>
             </div>
             <div class="smallContent">
@@ -167,6 +181,9 @@
                 <p>
                   19 февраля в этом году совпадает с неделей о Страшном Суде...
                 </p>
+                <div class="buttons">
+                  <span>></span><a href="#">Подробнее</a>
+                </div>
               </div>
             </div>
             <div class="smallContent">
@@ -176,6 +193,9 @@
                 <p>
                   19 февраля в этом году совпадает с неделей о Страшном Суде...
                 </p>
+                <div class="buttons">
+                  <span>></span><a href="#">Подробнее</a>
+                </div>
               </div>
             </div>
             <div class="smallContent">
@@ -185,6 +205,9 @@
                 <p>
                   19 февраля в этом году совпадает с неделей о Страшном Суде...
                 </p>
+                <div class="buttons">
+                  <span>></span><a href="#">Подробнее</a>
+                </div>
               </div>
             </div>
             <div class="smallContent">
@@ -194,6 +217,9 @@
                 <p>
                   19 февраля в этом году совпадает с неделей о Страшном Суде...
                 </p>
+                <div class="buttons">
+                  <span>></span><a href="#">Подробнее</a>
+                </div>
               </div>
             </div>
           </div>
@@ -265,6 +291,7 @@
         </div>
       </div>
     </footer>
+    <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/scripts.js"></script>
   </body>
 </html>
